<resources>
    <string name="app_name">Finance Management</string>
    <string name="recyclerviewmain_date">"Date: "</string>
    <string name="recyclerview_entrants">Entrants:</string>
    <string name="recyclerview_amount">Amount:</string>
    <string name="recyclerview_paidby">Paid by:</string>
    <string name="add_new_record_amount_spent">Amount spent:</string>
    <string name="add_new_record_add_another_person">Add Person</string>
    <string name="add_new_record_submit_all">Submit All</string>
    <string name="add_new_record_alert_no_payer_title">No payer</string>
    <string name="add_new_record_alert_no_payer_text">No payer set for this transaction</string>
    <string name="add_new_record_alert_amount_conflict_title">Amount conflict</string>
    <string name="add_new_record_alert_amount_conflict_text">Somehow the amount spent by each individual does not match up to the total amount spent in the group, discard this transaction and try again.</string>
    <string name="add_member_name">"Member name: "</string>
    <string name="add_member_amount">"Amount: "</string>
    <string name="add_member_amount_text">$100.00</string>
    <string name="add_member_bill_paid">"Bill paid: "</string>
    <string name="add_member_submit_text">Submit</string>
    <string name="add_new_user_name_text">"User Name: "</string>
    <string name="add_new_user_text">Add New User</string>
    <string name="add_new_user_missing_text">Missing Text</string>
    <string name="add_new_user_cancel_transaction_text">Please enter a name, or hit back button to cancel.</string>
    <string name="activity_mortgage_payment_calculator_text">Mortgage Payment Calculator</string>
    <string name="activity_mortgage_amount_text">Mortgage Amount</string>
    <string name="activity_mortgage_amortization_period_text">Amortization in Years</string>
    <string name="activity_mortgage_payment_frequency_text">Payment Frequency</string>
    <string name="activity_mortgage_interest_term_text">Interest Term</string>
    <string name="activity_mortgage_interest_amount_text">Interest Rate</string>
    <string name="activity_mortgage_interest_type_text">Interest Type</string>
    <string name="activity_mortgage_button_calculate_text">Calculate</string>
    <string name="mortgage_activity_title_text">Mortgage Payment Calculator</string>
    <string name="split_bill_activity_title_text">Calculate Bill</string>
    <string name="add_new_user_title_text">Add New User</string>
    <string name="add_member_activity_title_text">Add New Contributor</string>
    <string name="add_new_purchase_title_text">Add New Purchase</string>
    <string name="home_screen_activity_title_text">Finance Management</string>
    <string name="activity_mortgage_amount_default">500000</string>
    <string name="activity_mortgage_amortization_default">25</string>
    <string name="activity_mortgage_interestamount_default">2.99</string>
    <string name="activity_mortgage_interestterm_default">5</string>
    <string-array name="payment_frequency_array">
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="interest_type_array">
        <item>Fixed</item>
        <item>Variable</item>
    </string-array>
</resources>