<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddMemberActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="400dp">

        <TextView
            android:id="@+id/add_member_name_header"
            style="@style/TextBoxHeaderText"
            android:text="@string/add_member_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/add_member_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@id/add_member_name_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/add_member_name_header"
            app:layout_constraintTop_toTopOf="@+id/add_member_name_header" />

        <TextView
            android:id="@+id/add_member_amount_header"
            style="@style/TextBoxHeaderText"
            android:text="@string/add_member_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_member_name_header" />

        <EditText
            android:id="@+id/add_member_amount_value"
            style="@style/EditBoxStyles"
            android:hint="@string/add_member_amount_text"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/add_member_name_value"
            app:layout_constraintStart_toStartOf="@+id/add_member_name_value"
            app:layout_constraintTop_toBottomOf="@+id/add_member_name_value"
            tools:text="$100.0" />

        <TextView
            android:id="@+id/add_member_paid_header"
            style="@style/TextBoxHeaderText"
            android:text="@string/add_member_bill_paid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_member_amount_header" />

        <Switch
            android:id="@+id/add_member_paid_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/add_member_paid_header"
            app:layout_constraintEnd_toEndOf="@+id/add_member_amount_value"
            app:layout_constraintStart_toStartOf="@+id/add_member_amount_value"
            app:layout_constraintTop_toTopOf="@+id/add_member_paid_header" />


        <Button
            android:id="@+id/add_contributor_return_button"
            style="@style/MyButtonStyles"
            android:layout_width="180dp"
            android:layout_margin="16dp"
            android:text="@string/add_member_submit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/add_member_amount_value"
            app:layout_constraintTop_toBottomOf="@+id/add_member_paid_header"
            android:onClick="returnButtonClick"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_contrib_fab_add_user"
            style="@style/FloatingActionButtons"
            android:src="@drawable/ic_add_button"
            android:onClick="addNewUser"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>